bitkeeper revision 1.1159.12.1 (4117f0d1EjfQrr7cjM82SS7qdzq81A)
Build xend manual plus latex fixes

--- a/docs/xend.tex
+++ b/docs/xend.tex
@@ -123,7 +123,7 @@ to release the devices for exited domains. Xend also closes any open console
 connections and removes the TCP listeners for exited domains.
 Once all devices have been released it instructs xen to destroy the memory image.
 
-\seb{Domain restart}
+\secb{Domain restart}
 Domain restart is the xen equivalent of a machine reboot. When a domain
 exits because it has been shutdown in reboot mode, its exit code is reboot.
 When examining domains to find those that have exited and destroy them,
